:bug: fix: removing unnecessary spacing between carousel and button see all

--- a/src/app/core/layouts/projects/components/carousel/carousel.component.scss
+++ b/src/app/core/layouts/projects/components/carousel/carousel.component.scss
@@ -13,11 +13,11 @@
   .carousel-content {
     position: relative;
     width: 100%;
-    height: 39rem;
+    height: 32rem;
     overflow: hidden;
 
     @media screen and (min-width: 991px) {
-      height: 50rem;
+      height: 47rem;
     }
 
     button {
